deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crm
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: crm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      containers:
      - name: postgres
        image: postgres
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
            protocol: TCP
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  namespace: crm
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: server
  namespace: crm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: evilben/fluidmedia_crm
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
        args: ["-db-connect", "user=postgres password=$(POSTGRES_PASSWORD) host=postgres dbname=postgres"]
---
apiVersion: v1
kind: Service
metadata:
  namespace: crm
  name: server
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server
  namespace: crm
  labels:
    app: server
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - "crm.fluidmedia.wales"
    secretName: server-tls
  rules:
  - host: "crm.fluidmedia.wales"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: server
          servicePort: 8080
